wazaware.co.za | $Update#01 | No Comments...

--- a/WebScrapper_Prototype/Views/Shared/_HeaderInner.cshtml
+++ b/WebScrapper_Prototype/Views/Shared/_HeaderInner.cshtml
@@ -14,38 +14,59 @@
 											<a href="/Shop">Shop</a>
 										</li>
 										<li>
-											<a href="#0">Upgrade Components<i class="ti-angle-down"></i><span class="new">New</span></a>
+											<a href="#0">Laptops<i class="ti-angle-down"></i><span class="new">New</span></a>
 											<ul class="dropdown">
 												<li>
-													@Html.ActionLink("Kits", "Upgrade",
-													new { filter = "Kits" })
-												</li>
-												<li>
-													@Html.ActionLink("SSDs / HDDs", "Upgrade",
-													new { filter = "SSDs" })
-												</li>
-												<li>
-													@Html.ActionLink("Case Fans", "Upgrade",
-													new { filter = "Case Fans" })
-												</li>
-												<li>
-													@Html.ActionLink("Motherboards", "Upgrade",
-													new { filter = "Motherboards" })
-												</li>
-												<li>
-													@Html.ActionLink("PSUs", "Upgrade",
-													new { filter = "PSUs" })
-												</li>
-												<li>
-													@Html.ActionLink("Memory(RAM)", "Upgrade",
-													new { filter = "Memory" })
-												</li>
-												<li>
-													@Html.ActionLink("CPU Coolers", "Upgrade",
-													new { filter = "CPU Coolers" })
+													@Html.ActionLink("Coming Soon!", "Products",
+													new { category = "non", filter = "non" })
 												</li>
 											</ul>
-										</li>							
+										</li>
+										<li>
+											<a href="#0">Graphic Cards<i class="ti-angle-down"></i><span class="new">New</span></a>
+											<ul class="dropdown">
+												<li>
+													@Html.ActionLink("Coming Soon!", "Products",
+													new { category = "non", filter = "non" })
+												</li>
+											</ul>
+										</li>
+										<li>
+											<a href="#0">CPUs & Motherboards<i class="ti-angle-down"></i></a>
+											<ul class="dropdown">
+												<li>
+													@Html.ActionLink("Coming Soon!", "Products",
+													new { category = "non", filter = "non" })
+												</li>
+											</ul>
+										</li>
+										<li>
+											<a href="#0">PC Chassis<i class="ti-angle-down"></i></a>
+											<ul class="dropdown">
+												<li>
+													@Html.ActionLink("Coming Soon!", "Products",
+													new { category = "non", filter = "non" })
+												</li>
+											</ul>
+										</li>
+										<li>
+											<a href="#0">Data Storage<i class="ti-angle-down"></i></a>
+											<ul class="dropdown">
+												<li>
+													@Html.ActionLink("Coming Soon!", "Products",
+													new { category = "non", filter = "non" })
+												</li>
+											</ul>
+										</li>
+										<li>
+											<a href="#0">Aftermarket Components<i class="ti-angle-down"></i></a>
+											<ul class="dropdown">
+												<li>
+													@Html.ActionLink("Coming Soon!", "Products",
+													new { category = "non", filter = "non" })
+												</li>
+											</ul>
+										</li>
 									</ul>
 								</div>
 							</div>
