--- a/WebScrapper_Prototype/Views/Backend/Index.cshtml
+++ b/WebScrapper_Prototype/Views/Backend/Index.cshtml
@@ -23,7 +23,7 @@
         <img src="~/Media/Navigation/Back.png" height="50" width="50" /> Back
     </a>
     <h1>This page is currently be restructured!</h1>
-    <div class="hidden">
+
     <div class="container" style="margin-top:100px;">
         <div class="card">
             <div class="card-header">
@@ -33,8 +33,16 @@
                 <a onclick="loadDisplayProductImages()">SHOW Me That Money!</a>
             </div>
         </div>
+            <div class="card">
+                <div class="card-header">
+                    <h2>Send a SMS</h2>
+                </div>
+                <div class="card-body">
+                    <a href="@Url.Action("SendSMSToTelkom", "Backend", new {mobileNumber = "0815650206", message = "Hello World Test SMS"})" )>Send</a>
+                </div>
+            </div>
     </div>
-    <h1 style="margin-top:100px;">@ViewBag.setting Product List</h1>
+   @* <h1 style="margin-top:100px;">@ViewBag.setting Product List</h1>
     @using (Html.BeginForm("Index", "Backend", FormMethod.Get))
     {
         <div class="mb-3">
@@ -211,7 +219,7 @@
     <script type="text/javascript" src="js/popper.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/mdb.min.js"></script>
-    <script type="text/javascript">new WOW().init();</script>
+    <script type="text/javascript">new WOW().init();</script>*@
     
     <script type="text/javascript">
         function loadDisplayProductImages(startDisplay) {
