wazaware.co.za | $Update#02 | Spent 6 hrs on a stupid feature...

--- a/WebScrapper_Prototype/Views/Shared/_HeaderInner.cshtml
+++ b/WebScrapper_Prototype/Views/Shared/_HeaderInner.cshtml
@@ -1,4 +1,5 @@
-﻿			<!-- Header Inner -->
+﻿@model wazaware.co.za.Models.ProductsViewModel
+<!-- Header Inner -->
 <div class="header-inner">
 	<div class="container">
 		<div class="cat-nav-head">
