--- a/WebScrapper_Prototype/Views/Shop/Products.cshtml
+++ b/WebScrapper_Prototype/Views/Shop/Products.cshtml
@@ -92,243 +92,12 @@
 		<div id="progressBar"></div>
 	</div>
 	<!-- // -->
-	<!-- Header Shop -->
 	<div class="header shop" style="background-color:#FFF5E1;">
 		<!-- Topbar // Desktop Only -->
 		<div class="desktop">
-			<div class="topbar">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-5 col-md-12 col-12">
-							<!-- Top Left -->
-							<div class="top-left">
-								<ul class="list-main">
-									<li>
-										<div style="display:flex;flex-direction: row;flex-wrap: wrap;">
-											<script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
-											<a href="tel:0815650206" alt="Call us" style="border-radius:10px; white-space: nowrap;"
-											   data-toggle="tooltip" data-placement="right" title="Got a Question that can't wait? Give us a call!">
-												<lord-icon src="https://cdn.lordicon.com/pneolqso.json"
-														   trigger="hover"
-														   colors="primary:#f7941d,secondary:#545454,tertiary:#1663c7,quaternary:#ffffff"
-														   style="width:32px;height:32px">
-												</lord-icon>
-											</a>
-										</div>
-									</li>
-									<li>
-										<div style="display:flex;flex-direction: row;flex-wrap: wrap;">
-											<script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
-											<a href="mailto:brandenconnected@gmail.com" alt="Call us" style="border-radius:10px; white-space: nowrap;"
-											   data-toggle="tooltip" data-placement="right" title="Send us an email">
-												<lord-icon src="https://cdn.lordicon.com/tkgyrmwc.json"
-														   trigger="hover"
-														   colors="primary:#e88c30,secondary:#e88c30"
-														   style="width:32px;height:32px">
-												</lord-icon>
-											</a>
-										</div>
-									</li>
-								</ul>
-							</div>
-							<!--/ End Top Left -->
-						</div>
-						<div class="col-lg-6 col-md-12 col-12">
-							<!-- Top Right -->
-							<div class="right-content">
-								@if (ViewBag.IsCookie)
-								{
-									<ul class="list-main">
-										<li><i class="ti-shopping-cart"></i><a href="/Shop/Cart">Cart</a></li>
-										<li><i class="ti-bag"></i><a href="/Shop">Shop</a></li>
-										<li><i class="ti-power-off"></i><a href="/User">Login/Register</a></li>
-									</ul>
-								}
-								else
-								{
-									<ul class="list-main">
-										<li><i class="ti-shopping-cart"></i><a href="/Shop/Cart">Cart</a></li>
-										<li><i class="ti-bag"></i><a href="/Shop">Shop</a></li>
-										<li><i class="ti-power-off"></i><a href="/User">Account: @ViewBag.FirstName</a></li>
-									</ul>
-								}
-							</div>
-							<!-- End Top Right -->
-						</div>
-					</div>
-				</div>
-			</div>
+			<partial name="_TopBar" />
 			<!-- Middle Inner -->
-			<div class="middle-inner">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-3 col-md-2 col-12">
-							<div class="logo">
-								<a href="/"><img src="/Media/Logo/LogoOfficialCropped.png" alt="WaZaWare Find The Right Price!" style="border-radius:10px;"></a>
-							</div>
-						</div>
-						<div class="col-lg-7 col-md-7 col-12">
-							<div class="search-bar-top">
-								<div class="search-bar">
-									<form class="form-inline my-2 my-lg-0">
-										@Html.TextBox("search", ViewBag.Search as string,
-										new {Class="form-control me-2", Style="color:black;width: 100%;", PlaceHolder="Search..." })
-										<button href="#products" class="btnn" type="submit"><i class="ti-search"></i></button>
-									</form>
-								</div>
-							</div>
-						</div>
-						<div class="col-lg-2 col-md-3 col-12">
-							<div class="right-bar">
-								<div id="account" class="sinlge-bar shopping">
-									<a id="AccountHover" href="/User" onclick="loadAccount()" class="single-icon">
-										<i>
-											<script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
-											<lord-icon src="https://cdn.lordicon.com/dxjqoygy.json"
-													   trigger="loop-on-hover"
-													   delay="1000"
-													   colors="primary:#000000,secondary:#f7941d"
-													   style="width:50px;height:50px">
-											</lord-icon>
-										</i>
-									</a>
-									@if (ViewBag.IsCookie)
-									{
-										<div id="AccountOptions" class="shopping-item">
-											<div class="dropdown-cart-header">
-												<p>@ViewBag.FirstName</p>
-											</div>
-											<ul class="shopping-list">
-												<li>
-													<a class="h5" href="/User">Login</a>
-												</li>
-												<li>
-													<a class="h5" href="/User">Register</a>
-												</li>
-											</ul>
-										</div>
-									}
-									else
-									{
-										<div id="AccountOptions" class="shopping-item">
-											<div class="dropdown-cart-header">
-												<p>Hello <span class="font-weight-bold">@ViewBag.FirstName</span>,<br /> What would you like to do?</p>
-											</div>
-											<ul class="shopping-list">
-												<li>
-													<a class="cart-img" href="/User"><img src="" alt="UserImage" /></a>
-												</li>
-												<li>
-													<a class="h4" href="/User">My Account</a>
-												</li>
-												<li>
-													<a class="h5" href="/User">My Orders</a>
-												</li>
-												<li>
-													<a class="h6" href="/User">Check Order Status</a>
-												</li>
-											</ul>
-											<div class="bottom">
-												<a href="#" onclick="userLogout()" class="btn animate">Logout</a>
-											</div>
-										</div>
-									}
-								</div>
-								<div id="shoppingbasket" class="sinlge-bar shopping">
-									<a id="basketHover" href="#" onclick="loadCart()" class="single-icon">
-										<i>
-											<span class="total-count">@Model.Cart.Count</span>
-											<script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
-											<lord-icon src="https://cdn.lordicon.com/ggihhudh.json"
-													   trigger="loop-on-hover"
-													   delay="1000"
-													   colors="primary:#c79816,secondary:#674e03,tertiary:#F7941D"
-													   style="width:50px;height:50px">
-											</lord-icon>
-										</i>
-									</a>
-									@if (Model.Cart.Count > 0)
-									{
-										<!-- Shopping Item -->
-										<div class="shopping-item">
-											<div class="dropdown-cart-header">
-												<span>Items: @Model.Cart.Count</span>
-												<a href="/Shop/Cart">
-													View Cart
-												</a>
-											</div>
-											@foreach (var product in Model.Cart)
-											{
-												<ul class="shopping-list">
-													<li>
-														<a href="#" class="remove" title="Remove this item" onclick="loadDeleteCart('@product.ProductId')"><i class="fa fa-remove"></i></a>
-														<a class="cart-img" href="/Shop/Product/@product.ProductId">
-															<img src="@Url.Action("GetImage", "Backend", new { id = product.ProductId })" alt="@product.ProductName" style="width: 100px; height: 100%;" />
-														</a>
-														<h4><a href="/Shop/Product/@product.ProductId">@product.ProductName!.Substring(0,20) ...</a></h4>
-														<p class="quantity">
-															<span style="color:red; text-decoration-line:line-through;">R @product.ProductPriceBase</span>
-															<br>
-															<span class="amount" style="color:black;font-weight:800;">R @product.ProductPriceSale</span>
-														</p>
-													</li>
-												</ul>
-											}
-											<div class="bottom">
-												<div class="total">
-													<span>Sub Total:</span>
-													<span class="total-amount" style="text-decoration-line:line-through; color:red;">R @ViewBag.CartTotalBase</span>
-												</div>
-												<div class="total">
-													<span>Discount:</span>
-													<span class="total-amount" style="color:red;font-weight:800;">R @ViewBag.Savings</span>
-												</div>
-												<div class="total">
-													<span>Total:</span>
-													<span class="total-amount" style="text-decoration-line:underline">R @ViewBag.CartTotalSale</span>
-												</div>
-												<a href="/Checkout" class="btn animate">Checkout</a>
-											</div>
-										</div>
-										<!--/ End Shopping Item -->
-									}
-									else
-									{
-										<!-- Shopping Item -->
-										<div class="shopping-item">
-											<div class="dropdown-cart-header">
-												<span>Items: 0</span>
-												<a href="/User">
-													Login?
-												</a>
-											</div>
-											<ul class="shopping-list">
-												<li>
-													<a class="cart-img" href="#shoplatest">
-														<i>
-															<script src="https://cdn.lordicon.com/ritcuqlt.js"></script>
-															<lord-icon src="https://cdn.lordicon.com/tyounuzx.json"
-																	   trigger="loop"
-																	   colors="primary:#121331,secondary:#e88c30"
-																	   style="width:35px;height:35px">
-															</lord-icon>
-														</i>
-													</a>
-													<h4>Cart is Empty...</h4>
-												</li>
-											</ul>
-											<div class="bottom">
-												<a href="#shoplatest" class="btn animate">Shop Latest Deals</a>
-											</div>
-										</div>
-										<!--/ End Shopping Item -->
-									}
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+			<partial name="_MiddleInner" />
 			<!-- Header Inner Partial View-->
 			<partial name="_HeaderInner" />
 		</div>
@@ -341,7 +110,6 @@
 		</div>
 		<!-- // -->
 	</div>
-	<!-- // -->
 	<!-- Product Grid -->
 	<section class="product-area shop-sidebar shop section">
 		<div class="container" style="max-width:100%">
